# av-learning

./: .gitignore  deployment.md  environment.md  readme.md  todo.md  windows_env_preparation.ps1
src/: readme.md
src/DebugFFplay/: DebugFFplay.sln  DebugFFplay.vcxproj  DebugFFplay.vcxproj.filters
src/FFmpeg/TestDecode/: TestDecode.sln  TestDecode.vcxproj
src/FFmpeg/TestDemux/: TestDemux.vcxproj  main.cpp
src/FFmpeg/TestFFmpeg/: TestFFmpeg.pro  TestFFmpeg.sln  TestFFmpeg.vcxproj  main.cpp
src/OpenGL/: readme.md
src/OpenGL/GLFW/: CMakeLists.txt  coordinate_system.cpp  draw_triangle.cpp  glad.c  shader.cpp  shader_exercise.cpp  shader_for_yuv420p.cpp  shader_for_yuvnv12rgba.cpp  shader_programs.cpp  texture.cpp  texture_combination.cpp  transformation.cpp  triangle.cpp  triangle_exercise.cpp  utils.h  window_creation.cpp
src/OpenGL/TestQtOpenGL/: TestQtOpenGL.ui  TestQtOpenGL.vcxproj  TestQtOpenGL.vcxproj.filters  XVideoWidget.cpp
src/OpenGL/textures/: glwidget.cpp  glwidget.h  main.cpp  textures.pro  textures.qrc  window.cpp  window.h
src/Player/: AudioPlayer.h  CMakeLists.txt  Decoder.cpp  Decoder.h  MediaInfo.cpp  MediaInfo.h  Queue.h  Resampler.cpp  Resampler.h  SDLAudioPlayer.cpp  SDLAudioPlayer.h  SDLVideoPlayer.cpp  SDLVideoPlayer.h  VideoPlayer.h  header.h  main.cpp  note.md  wav_player.cpp
src/Qt/TestQAudioOutput/: TestQAudioOutput.sln  TestQAudioOutput.vcxproj
src/Qt/helloworld/: CMakeLists.txt  main.cpp
src/Qt/vsqt/: main.cpp  resource.h  vsqt.pri  vsqt.ui  vsqt.vcxproj  vsqt.vcxproj.filters
src/TestDecode/: main.cpp
src/TestDemux/: TestDemux.sln
src/TestFFmpeg/: TestFFmpeg.vcxproj  main.cpp
src/TestQAudioOutput/: main.cpp
src/TestQtOpenGL/: TestQtOpenGL.cpp  TestQtOpenGL.h  TestQtOpenGL.qrc  TestQtOpenGL.sln  XVideoWidget.h  main.cpp
src/TestXPlayer/: XPlay2.cpp  XPlay2.sln  XPlay2.vcxproj  XPlay2.vcxproj.filters  main.cpp
src/XPlayer/: IVideoCall.h  XAudioPlayer.cpp  XAudioPlayer.h  XAudioThread.cpp  XAudioThread.h  XDecodeThread.cpp  XDecodeThread.h  XDecoder.cpp  XDecoder.h  XDemuxThread.cpp  XDemuxThread.h  XDemuxer.cpp  XDemuxer.h  XPlayer.cpp  XPlayer.h  XPlayer.sln  XPlayer.ui  XPlayer.vcxproj  XPlayer.vcxproj.filters  XResampler.cpp  XResampler.h  XSlider.cpp  XSlider.h  XVideoThread.cpp  XVideoThread.h  XVideoWidget.cpp  XVideoWidget.h  main.cpp  readme.md
src/basics/: CMakeLists.txt  Queue.h  aac_parser.cpp  avframe_to_picture.cpp  crop_picture.cpp  flv_parser.cpp  frame_to_jpeg.cpp  h264_parser.cpp  mp3_parser.cpp  pcm_player.cpp  pcm_player_with_qt.cpp  pcm_player_with_sdl.cpp  pcm_player_with_sdl_callback.cpp  rotate_picture.cpp  rtp_ts_parser.cpp  rtsp_over_tcp_h264.cpp  scale_picture_without_filter.cpp  simplest_yuv420p_border.c  simplest_yuv420p_gray.c  simplest_yuv420p_split.c  simplest_yuv420p_y_half.c  simplest_yuv444p_split.c  utils.h  variable_speed_playback_for_audio.cpp  variable_speed_playback_with_swresample.cpp  watermark_on_picture.cpp  wav_player.cpp
src/ffplay-learning/: CMakeLists.txt  cmdutils.c  config.h  ffplay.c  note.md
src/helloworld/: CMakeLists.txt  helloworld.pro  widget.ui
src/vsqt/: vsqt.pro  vsqt.sln
tools/: install_ffmpeg.py  install_sdl.py  main.py  utils.py
